2019-02-19  Jakub Jelinek  <jakub@redhat.com>

	PR c++/89387
	* g++.dg/cpp0x/lambda/lambda-89387.C: New test.

	PR c++/89391
	* g++.dg/cpp0x/reinterpret_cast2.C: New test.

	PR c++/89390
	* g++.dg/diagnostic/pr89390.C: New test.

2019-02-18  Sharon Dvir  <unapologtic@gmail.com>

	* README: Fix typos.

2019-02-18  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.dg/torture/pr89303.C (bad_weak_ptr): Rename to
	bad_weak_ptr_.

2019-02-18  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/87689
	* gfortran.dg/lto/20091028-1_0.f90: Add -Wno-lto-type-mismatch to
	options.
	* gfortran.dg/lto/20091028-2_0.f90: Likewise.
	* gfortran.dg/lto/pr87689_0.f: New file.
	* gfortran.dg/lto/pr87689_1.f: New file.

2019-02-18  Wilco Dijkstra  <wdijkstr@arm.com>

	* g++.dg/wrappers/pr88680.C: Add -fno-short-enums.

2019-02-18  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gdc.dg/dg.exp: Tabify.
	* gdc.dg/lto/lto.exp: Likewise.
	* gdc.test/gdc-test.exp: Likewise.
	* lib/gdc-dg.exp: Likewise.
	* lib/gdc.exp: Likewise.

2019-02-18  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/89296
	* gcc.dg/uninit-pr89296.c: New testcase.

2019-02-18  Jakub Jelinek  <jakub@redhat.com>

	PR target/89369
	* gcc.c-torture/execute/pr89369.c: New test.
	* gcc.target/s390/md/rXsbg_mode_sXl.c (rosbg_si_srl,
	rxsbg_si_srl): Expect last 3 operands 32,63,62 rather than
	34,63,62.

2019-02-18  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/89209
	* gcc.dg/tree-ssa/pr89209.c: New test.

2019-02-18  Martin Liska  <mliska@suse.cz>

	* gfortran.dg/simd-builtins-7.f90: New test.
	* gfortran.dg/simd-builtins-7.h: New test.

2019-02-17  Harald Anlauf  <anlauf@gmx.de>

	PR fortran/88299
	* gfortran.dg/pr88299.f90: New test.

2019-02-17  Harald Anlauf  <anlauf@gmx.de>

	PR fortran/89077
	* gfortran.dg/transfer_simplify_12.f90: New test.

2019-02-17  Marek Polacek  <polacek@redhat.com>

	PR c++/89217 - ICE with list-initialization in range-based for loop.
	* g++.dg/cpp0x/range-for37.C: New test.
